--- a/DentalResearchApp/Views/UserSession/UserSessionDetailsModal.cshtml
+++ b/DentalResearchApp/Views/UserSession/UserSessionDetailsModal.cshtml
@@ -1,4 +1,4 @@
-﻿@model DentalResearchApp.Models.StudyDetailsViewModel
+﻿@*@model DentalResearchApp.Models.StudyDetailsViewModel
 
 <div class="modal-header">
     <link rel="stylesheet" href="/css/Index.css" type="text/css" />
@@ -35,7 +35,7 @@
                         <th class="customTh">Participants</th>
                     </tr>
                 </thead>
-                @if (Model.Participants.Any())
+                @if (Model.)
                 {
                     <tbody>
                         @foreach (var item in Model.Participants)
@@ -80,4 +80,4 @@
 <div class="modal-footer" style="text-align: center">
     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 </div>
-<div class="clearfix"></div>
+<div class="clearfix"></div>*@
