--- a/DentalResearchApp/Views/_Layout.cshtml
+++ b/DentalResearchApp/Views/_Layout.cshtml
@@ -16,14 +16,8 @@
     <div class="wrapper">
         <nav id="sidebar">
             <div class="" style="text-align: center">
-                <h4>Tandlægehøjskolen Aarhus</h4>
+                <h4>Appartment of Dentistry and Oral Health, Aarhus</h4>
             </div>
-            <hr/>
-            <ul class="list-unstyled">
-                <li>
-                    @Html.ActionLink("Home", "HomePage", "HomePage")
-                </li>
-            </ul>
             <hr/>
             <ul class="list-unstyled">
                     <li>
@@ -43,7 +37,7 @@
                     @Html.ActionLink("Studies", "AllStudies", "Study")
                 </li>
                 <li>
-                    @Html.ActionLink("Find Results", "FindResults", "Results")
+                    @Html.ActionLink("Find Results", "FindResults", "Survey")
                 </li>
             </ul>
             <hr/>
