--- a/DentalResearchApp/wwwroot/css/Index.css
+++ b/DentalResearchApp/wwwroot/css/Index.css
@@ -104,6 +104,10 @@ section {
     padding: 20px 0px 120px 0px;
     width: 70%;
 }
+
+.customTd:hover {
+    background-color: grey;
+}
 .customTd {
     border: 2px solid #47748b;
     height: 40px;
@@ -197,8 +201,6 @@ a[data-toggle="collapse"] {
     transform: translateY(-50%);
 }
 
-
-/* Til håndtering af mindre skærme*/
 @media (max-width: 768px) {
     #sidebar {
         margin-left: -250px;
@@ -207,4 +209,62 @@ a[data-toggle="collapse"] {
         #sidebar.active {
             margin-left: 0;
         }
+}
+
+.popup {
+    position: sticky;
+    display: inline-block;
+    cursor: pointer;
+}
+
+    .popup .popuptext {
+        visibility: hidden;
+        width: 160px;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 8px 0;
+        position: absolute;
+        z-index: 1;
+        bottom: 125%;
+        left: 50%;
+        margin-left: -80px;
+    }
+
+        .popup .popuptext::after {
+            content: "";
+            position: absolute;
+            top: 100%;
+            left: 50%;
+            margin-left: -5px;
+            border-width: 5px;
+            border-style: solid;
+            border-color: #555 transparent transparent transparent;
+        }
+
+    .popup .show {
+        visibility: visible;
+        -webkit-animation: fadeIn 1s;
+        animation: fadeIn 1s
+    }
+
+@-webkit-keyframes fadeIn { 
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
