--- a/DentalResearchApp/Views/Session/SessionDetails.cshtml
+++ b/DentalResearchApp/Views/Session/SessionDetails.cshtml
@@ -46,13 +46,19 @@
             }
         </table>
         <br />
-        @using (Html.BeginForm("DeleteSession", "Session", HttpMethod.Post))
-        {
-            @Html.Hidden("sessionName",Model.SessionName)
-            @Html.Hidden("studyId",Model.StudyId)
-            <input type="submit" value="Delete Session" class="btn btn-danger" />
-        }
-        @Html.ActionLink("Back to Studies List", "AllStudies", "Study", null, new { @class = "btn btn-primary" })
+        <div class="col-lg-12 col-md-12 col-sm-12" style="text-align: center">
+            <div class="col-lg-6 col-md-6" style="text-align: right">
+                @using (Html.BeginForm("DeleteSession", "Session", HttpMethod.Post))
+                {
+                    @Html.Hidden("sessionName", Model.SessionName)
+                    @Html.Hidden("studyId", Model.StudyId)
+                    <input type="submit" value="Delete Session" class="btn btn-danger" />
+                }
+            </div>
+            <div class="col-lg-6 col-md-6" style="text-align: left">
+                @Html.ActionLink("Back to Studies List", "AllStudies", "Study", null, new { @class = "btn btn-primary" })
+            </div>
+        </div>
     </div>
 </body>
 </html>
