--- a/DentalResearchApp/Views/Admin/Admin.cshtml
+++ b/DentalResearchApp/Views/Admin/Admin.cshtml
@@ -25,7 +25,7 @@
             <div class="col-lg-4, col-md-4, col-xs-4" style="text-align: center">
             </div>
             <div class="col-lg-3, col-md-3, col-xs-3" style="text-align: left">
-                @Html.TextBoxFor(x => x.Email, "E-mail", new { @class = "form-control", @id = "email", @placeholder = "E-mail", @required = true, @type = "email", @maxlength = "60", @style = "width: 300px" })
+                @Html.TextBoxFor(x => x.Email, "E-mail", new { @class = "form-control", @id = "email", @placeholder = "E-mail", @required = true, @type = "email", @maxlength = "60" })
             </div>
             <div class="col-lg-2, col-md-2, col-xs-2" style="text-align: center">
                 <input type="submit" value="Send Invite" id="InviteUser" class="btn btn-primary">
