--- a/DentalResearchApp/Views/UserSession/UserSessionDetailsModal.cshtml
+++ b/DentalResearchApp/Views/UserSession/UserSessionDetailsModal.cshtml
@@ -1,8 +1,8 @@
-﻿@*@model DentalResearchApp.Models.StudyDetailsViewModel
+﻿@model DentalResearchApp.Models.UserSessionDetailsViewModel
 
 <div class="modal-header">
     <link rel="stylesheet" href="/css/Index.css" type="text/css" />
-    <h2 class="modal-title secondHeadline" style="text-align: center">Study Details</h2>
+    <h2 class="modal-title secondHeadline" style="text-align: center">User Session Details</h2>
 </div>
 <div class="modal-body">
     <ul class="list-unstyled">
@@ -17,62 +17,49 @@
         </li>
         <li class="row">
             <div class="col-lg-1 col-md-1 col-sm-1" style="text-align: left"></div>
+
             <div class="col-lg-3 col-md-3 col-sm-3" style="text-align: left">
-                @Html.Label("Description:")
+                @Html.Label("Session Name:")
             </div>
             <div class="col-lg-8 col-md-8 col-sm-8" style="text-align: left">
-                @Html.DisplayFor(model => model.StudyDescription)
+                @Html.DisplayFor(model => model.SessionName)
+            </div>
+        </li>
+        <li class="row">
+            <div class="col-lg-1 col-md-1 col-sm-1" style="text-align: left"></div>
+            <div class="col-lg-3 col-md-3 col-sm-3" style="text-align: left">
+                @Html.Label("ParticipantId:")
+            </div>
+            <div class="col-lg-8 col-md-8 col-sm-8" style="text-align: left">
+                @Html.DisplayFor(model => model.ParticipantId)
             </div>
         </li>
     </ul>
     <hr />
     <div class="row">
-        <div class="col-lg-6 col-md-6 col-sm-6">
-            <h4 class="secondHeadline" style="font-weight: bold">Participants</h4>
+        <div class="col-lg-12 col-md-12 col-sm-12">
+            <h4 class="secondHeadline" style="font-weight: bold">Survey Results</h4>
             <table class="customTable">
                 <thead>
                     <tr>
-                        <th class="customTh">Participants</th>
+                        <th class="customTh">Survey names</th>
                     </tr>
                 </thead>
-                @if (Model.)
+                @if (Model.ResultLinks.Any())
                 {
                     <tbody>
-                        @foreach (var item in Model.Participants)
+                        @foreach (var item in Model.ResultLinks)
                         {
                             <tr>
                                 <td class="customTd" id="patientId">
-                                    @item
+                                    @*@Html.ActionLink(item.SurveyName, "GetResultsForUserSession", "Survey", new {ParticipantId = Model.ParticipantId, UserSessionId = item.UserSessionId, SurveyName = item.SurveyName})*@
+                                    @Html.ActionLink(item.SurveyName, "Results", "Survey", new { participantId = Model.ParticipantId, userSessionId = item.UserSessionId, id = item.SurveyName }, null)
+                                    @*@Html.ActionLink(item.SurveyName, "Results", "Survey", new {id = item.SurveyName })*@
                                 </td>
                             </tr>
                         }
                     </tbody>}
             </table>
-        </div>
-        <div class="col-lg-6 col-md-6 col-sm-6">
-            <h4 class="secondHeadline" style="font-weight: bold">Sessions</h4>
-            <table class="customTable">
-                <thead>
-                    <tr>
-                        <th class="customTh">Session Names</th>
-                    </tr>
-                </thead>
-                @if (Model.Sessions.Any())
-                {
-                    <tbody>
-                        @foreach (var item in Model.Sessions)
-                        {
-                            <tr>
-                                <td class="customTd">
-                                    @Html.ActionLink(item, "SessionDetails", "Session", new { studyId = Model.StudyId, sessionName = item, studyName = Model.StudyName }, null)
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                }
-            </table>
-            <br />
-            @Html.ActionLink("Create new Session", "CreateSession", "Session", new { studyId = Model.StudyId, studyName = Model.StudyName }, new { @class = "btn-sm btn-success" })
         </div>
     </div>
 </div>
@@ -80,4 +67,4 @@
 <div class="modal-footer" style="text-align: center">
     <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
 </div>
-<div class="clearfix"></div>*@
+<div class="clearfix"></div>
