--- a/DentalResearchApp/Views/Login/SignUp.cshtml
+++ b/DentalResearchApp/Views/Login/SignUp.cshtml
@@ -9,9 +9,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="/css/Styles.css" type="text/css" />
-    <script type="text/javascript" src="/js/PasswordValidation.js"></script>
-    <script src="/js/jquery.min.js"></script>
+    <link rel="stylesheet" href="~/css/Styles.css" type="text/css" />
+    <script type="text/javascript" src="~/js/PasswordValidation.js"></script>
+    <script src="~/js/jquery.min.js"></script>
     <title>Dental Research App - Sign Up</title>
 </head>
 <body>
