--- a/DentalResearchApp/Views/Profile/ChangePasswordModal.cshtml
+++ b/DentalResearchApp/Views/Profile/ChangePasswordModal.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DentalResearchApp.Models.ChangePasswordModel
 
 <div class="modal-header">
-    <script type="text/javascript" src="/js/PasswordValidation.js"></script>
+    <script type="text/javascript" src="~/js/PasswordValidation.js"></script>
     <link rel="stylesheet" href="/css/Index.css" type="text/css" />
     <h2 class="modal-title secondHeadline" style="text-align: center">Change password</h2>
     
