--- a/DentalResearchApp/wwwroot/css/Index.css
+++ b/DentalResearchApp/wwwroot/css/Index.css
@@ -101,7 +101,7 @@ section {
 .customTable {
     border: 4px solid #47748b;
     margin: 0 auto 0 auto;
-    padding: 20px 0px 120px 0px;
+    padding: 20px 0 120px 0;
     width: 70%;
 }
 
@@ -155,7 +155,7 @@ a, a:hover, a:focus {
     padding: 20px;
 }
 
-#sidebar ul.components {
+#sidebar .components {
     padding: 20px 0;
     border-bottom: 1px solid #47748b;
 }
@@ -183,8 +183,8 @@ a, a:hover, a:focus {
 }
 
 ul ul a {
-    font-size: 0.9em !important;
-    padding-left: 30px !important;
+    font-size: 0.9em;
+    padding-left: 30px;
     color: #fff;
     background: #7386d5;
 }
@@ -232,7 +232,7 @@ a[data-toggle="collapse"] {
         margin-left: -80px;
     }
 
-        .popup .popuptext::after {
+        .popup .popuptext:after {
             content: "";
             position: absolute;
             top: 100%;
