--- a/DentalResearchApp/wwwroot/css/Styles.css
+++ b/DentalResearchApp/wwwroot/css/Styles.css
@@ -4,12 +4,15 @@
     margin: 0 auto 0 auto;  
     width:100%; 
     text-align:center;
-    margin: 20px 0px 20px 0px;   
 }
+
+    .login {
+        background: #3498db
+    }
 
 select {
     font-family: 'Open Sans', sans-serif;
-    margin:0px;
+    margin:0;
     border: none;
     border-top: none;
     border-left: none;
@@ -43,7 +46,7 @@ input:invalid {
     width: 400px;
     border-radius: 100px;
     margin: 0 auto 0 auto;
-    padding: 20px 0px 120px 0px;
+    padding: 20px 0 120px 0;
     border: #2980b9 25px solid;
 }
 
@@ -73,21 +76,6 @@ input:invalid {
     font-size: 1em;
 }
 
-input[type=button], input[type=submit], input[type=reset] {
-    background: #2ecc71;
-    width: 125px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    color: white;
-    border-radius: 4px;
-    border: #27ae60 1px solid;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    float: left;
-    margin-left: 16px;
-    font-weight: 800;
-    font-size: 0.8em;
-}
 
 .button{
     background:#2ecc71;
