--- a/DentalResearchApp/Views/_Layout.cshtml
+++ b/DentalResearchApp/Views/_Layout.cshtml
@@ -16,7 +16,7 @@
     <div class="wrapper">
         <nav id="sidebar">
             <div class="" style="text-align: center">
-                <h4>Appartment of Dentistry and Oral Health, Aarhus</h4>
+                <h4>@Html.ActionLink("Department of Dentistry and Oral Health, Aarhus", "AllStudies", "Study")</h4>
             </div>
             <hr/>
             <ul class="list-unstyled">
