--- a/DentalResearchApp/Views/_Layout.cshtml
+++ b/DentalResearchApp/Views/_Layout.cshtml
@@ -15,13 +15,11 @@
 <body>
     <div class="wrapper">
         <nav id="sidebar">
-            <div class="" style="text-align: center">
-
+            <div style="text-align: center">
                 <h4>@Html.ActionLink("Department of Dentistry and Oral Health, Aarhus", "AllStudies", "Study")</h4>
             </div>
-
-
-
+            <hr />
+            <ul class="list-unstyled">
                 <li>
                     <a href="#surveySubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Surveys <span class="caret"></span></a>
                     <ul class="collapse list-unstyled" id="surveySubmenu">
@@ -33,7 +31,6 @@
                     </ul>
                 </li>
             </ul>
-
             <hr />
             <ul class="list-unstyled">
                 <li>
