--- a/DentalResearchApp/wwwroot/css/Index.css
+++ b/DentalResearchApp/wwwroot/css/Index.css
@@ -15,61 +15,83 @@ section {
 
 .survey-page-header,
 .survey-page-header .sv_main {
-
-  background-color: white;
+    background-color: white;
 }
 
 .survey-page-header-content {
-
     background-color: white;
-  max-width: 80%;
-  margin: auto;
-  padding: 1.5em;
+    max-width: 80%;
+    margin: auto;
+    padding: 1.5em;
 }
 
-
+    .survey-page-header-content a {
+        color: white;
+        text-decoration: unset;
+    }
 
 .sv_main.sv_frame .sv_container .sv_header {
-
+    padding-top: 2em;
 }
 
 .svd_container .sv_custom_header {
-
+    display: none;
 }
 
 .sv_main.sv_frame .svd_container .sv_container {
-
+    max-width: none;
+    padding: unset;
 }
 
 .surveys-list table thead td {
-
+    font-weight: bold;
 }
 
 .surveys-list table td:nth-child(2) {
-
+    width: 50%;
 }
 
 .sv_button_link {
-
+    color: #1ab394;
+    width: 100px;
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    text-align: center;
 }
 
+    .sv_button_link:hover,
+    .sv_button_link:visited:hover {
+        background-color: #1ab394;
+        border-color: #1ab394;
+        color: #fff;
+        border-radius: 2px;
+        text-decoration: none;
+    }
 
+    .sv_button_link:visited {
+        color: #1ab394;
+    }
 
+    .sv_button_link.sv_button_delete {
+        color: #ec2626;
+    }
 
-
-
-
+        .sv_button_link.sv_button_delete:hover {
+            background-color: #ec2626;
+            color: #fff;
+        }
 
 #resultsTable td {
-
+    cursor: pointer;
 }
 
 .sv_body {
-
+    overflow: scroll;
 }
 
 .fork_me_on_github img {
-
+    z-index: 1;
 }
 
 .customTable left {
@@ -78,16 +100,18 @@ section {
     text-align: left;
     width: 50%;
 }
+
 .customTable {
     border: 4px solid #47748b;
     margin: 0 auto 0 auto;
-
+    padding: 20px 0 120px 0;
     width: 70%;
 }
 
 .customTd:hover {
     background-color: grey;
 }
+
 .customTd {
     border: 2px solid #47748b;
     height: 40px;
@@ -99,6 +123,7 @@ section {
     height: 50px;
     text-align: center
 }
+
 
 p {
     font-family: 'Poppins', sans-serif;
@@ -134,7 +159,6 @@ a, a:hover, a:focus {
     padding: 20px;
 }
 
-
 #sidebar .components {
     padding: 20px 0;
     border-bottom: 1px solid #47748b;
@@ -163,7 +187,6 @@ a, a:hover, a:focus {
 }
 
 ul ul a {
-
     font-size: 0.9em;
     padding-left: 30px;
     color: #fff;
@@ -182,7 +205,7 @@ a[data-toggle="collapse"] {
     transform: translateY(-50%);
 }
 
-/* Til håndtering af mindre skærme*/@media (max-width: 768px) {
+@media (max-width: 768px) {
     #sidebar {
         margin-left: -250px;
     }
@@ -230,7 +253,7 @@ a[data-toggle="collapse"] {
         animation: fadeIn 1s
     }
 
-@-webkit-keyframes fadeIn { 
+@-webkit-keyframes fadeIn {
     from {
         opacity: 0;
     }
