- Lavet klasse diagram og små oprydninger i koden

--- a/DentalResearchApp/Views/Admin/EditUserModal.cshtml
+++ b/DentalResearchApp/Views/Admin/EditUserModal.cshtml
@@ -26,10 +26,11 @@
             </div>
         </li>
         <li class="row">
-            <div class="col-lg-1 col-md-1 col-sm-1" style="text-align: left"></div>
+            <div class="col-lg-1 col-md-1 col-sm-1" style="text-align: left">
+                @Html.HiddenFor(x => x.Email, Model.Email)
+            </div>
             <div class="col-lg-4 col-md-4 col-sm-4" style="text-align: left">
                 @Html.Label("Email: " + Model.Email)
-                @Html.HiddenFor(x => x.Email, Model.Email)
             </div>
         </li>
         <li class="row">
