--- a/DentalResearchApp/Views/Login/SignUp.cshtml
+++ b/DentalResearchApp/Views/Login/SignUp.cshtml
@@ -10,6 +10,7 @@
 <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="~/css/Styles.css" type="text/css" />
+
     <script type="text/javascript" src="~/js/PasswordValidation.js"></script>
     <script src="~/js/jquery.min.js"></script>
     <title>Dental Research App - Sign Up</title>
@@ -29,7 +30,7 @@
             @Html.DropDownListFor(x => x.Country, new SelectList(Model.Country), new { @class = "inputField form-control", @id = "country", @required = true, style = "width:270px" })
             @Html.Hidden("LinkId", Context.Request.QueryString.ToString().Substring(4, Context.Request.QueryString.ToString().Length - 4))
             <br />
-            <input type="submit" value="Sign up" id="UserDataSubmit" class="form-group" style="margin-left: 140px; margin-top: 10px">
+            <input type="submit" value="Sign up" id="UserDataSubmit" style="text-align: center; margin-top: 10px; background: lightgreen; padding: 10px; border-radius: 10px ">
         }
     </div>
 <script type="text/javascript">
