--- a/DentalResearchApp/Views/Session/SessionDetails.cshtml
+++ b/DentalResearchApp/Views/Session/SessionDetails.cshtml
@@ -37,7 +37,7 @@
                     @foreach (var item in Model.SelectedSurveys)
                     {
                         <tr>
-                            <td class="customTd">
+                            <td class="customTd2">
                                 @item
                             </td>
                         </tr>
