--- a/DentalResearchApp/Views/Profile/Profile.cshtml
+++ b/DentalResearchApp/Views/Profile/Profile.cshtml
@@ -5,7 +5,6 @@
     Layout = "~/Views/_Layout.cshtml";
 }
 
-
 <html>
 <head>
     <meta charset="utf-8" />
@@ -77,7 +76,7 @@
             <hr />
             </li>
             <li class="col-lg-12 col-md-12 col-sm-12" style="text-align: center ">
-                @Html.ActionLink("Admin", "Admin", "Admin", null, new { @class = "btn-sm btn-success", style = Model.Role != DentalResearchApp.Models.Role.Administrator ? "visibility: hidden" : "visibility: visible" })
+                @Html.ActionLink("Admin", "Admin", "Admin", null, new { @class = "btn btn-success", style = Model.Role != DentalResearchApp.Models.Role.Administrator ? "visibility: hidden" : "visibility: visible" })
             </li>
         </ul>
         <div class="modal fade text-center" id="ChangePasswordModal" role="dialog">
