--- a/DentalResearchApp/Views/Session/CreateSession.cshtml
+++ b/DentalResearchApp/Views/Session/CreateSession.cshtml
@@ -45,7 +45,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-8 form-group" style="text-align: center">
-                    @Html.ListBoxFor(x => x.SelectedSurveys, Model.AllSurveys, new {style = "width: 350px", multiple = "multiple", required = true, @class = "form-control"})
+                    @Html.ListBoxFor(x => x.SelectedSurveys, Model.AllSurveys, new {style="width: 400px; height: 250px", multiple = "multiple", required = true, @class = "form-control"})
                 </div>
             </li>
         </ul>
