--- a/DentalResearchApp/Views/Survey/Results.cshtml
+++ b/DentalResearchApp/Views/Survey/Results.cshtml
@@ -1,8 +1,11 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Http
+@using Microsoft.AspNetCore.Server.Kestrel.Internal;
+<!DOCTYPE html>
 <html>
-@{ 
+@{
     Layout = "../_Layout.cshtml";
     ViewBag.Title = "Dental Research App";
+    var sourceSite = Url.ActionContext.HttpContext.Request.Headers["Referer"];
 }
 <head>
     <meta charset="utf-8" />
@@ -19,24 +22,24 @@
 </head>
 
 <body>
-<div class="survey-page-header">
-    <div class="sv_main survey-page-header-content">
-        <button onclick="window.location = '/survey'">&lt&nbspBack</button>
-    </div>
-</div>
-<div class="sv_main sv_frame sv_default_css">
-    <div class="sv_custom_header"></div>
-    <div class="sv_container">
-        <div class="sv_header">
-            <h3 data-bind="text: surveyId + ' results'"></h3>
-        </div>
-        <div class="sv_body">
-            <table id="resultsTable" class="table table-striped table-bordered">
-            </table>
+    <div class="survey-page-header">
+        <div class="sv_main survey-page-header-content">
+            <input type="button" value="&lt Back" class="btn btn-primary" onclick="location.href='@sourceSite'"/>
         </div>
     </div>
-</div>
-<script src="/js/results.js"></script>
+    <div class="sv_main sv_frame sv_default_css">
+        <div class="sv_custom_header"></div>
+        <div class="sv_container">
+            <div class="sv_header">
+                <h3 data-bind="text: surveyId + ' results'"></h3>
+            </div>
+            <div class="sv_body">
+                <table id="resultsTable" class="table table-striped table-bordered"></table>
+            </div>
+        </div>
+    </div>
+    <script src="/js/results.js">
+    </script>
 </body>
 
 </html>
