- important last fix

--- a/DentalResearchApp/Views/Study/AllStudies.cshtml
+++ b/DentalResearchApp/Views/Study/AllStudies.cshtml
@@ -1,4 +1,5 @@
-﻿@model DentalResearchApp.Models.AllStudiesViewModel
+﻿@using Microsoft.AspNetCore.Mvc.Rendering
+@model DentalResearchApp.Models.AllStudiesViewModel
 @{
     ViewBag.Title = "All Studies";
     Layout = "~/Views/_Layout.cshtml";
@@ -8,9 +9,9 @@
 <head>
     <meta charset="utf-8" />
 
-    <link rel="stylesheet" href="../css/3rdParty/bootstrap.min.css" />
-    <script type="text/javascript" src="../js/3rdParty/jquery.min.js"></script>
-    <script src="../js/3rdParty/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="~/css/3rdParty/bootstrap.min.css" />
+    <script type="text/javascript" src="~/js/3rdParty/jquery.min.js"></script>
+    <script src="~/js/3rdParty/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="/css/Index.css" type="text/css" />
     <title>Dental Research App - All Studies</title>
